@@ -339,6 +339,21 @@
 				to pair the two files as a rename.
 			</para>
 		</tip>
+		<tip>
+			<title>Repairing External Copies</title>
+			<para>
+				If made a copy of a file but forgot to use the Subversion command
+				to do so, you can repair that copy so the new file doesn't loose
+				its history.
+				Simply select both the old name (normal or modified) and the new name (unversioned)
+				and use
+				<menuchoice>
+					<guimenu>Context Menu</guimenu>
+					<guimenuitem>Repair Copy</guimenuitem>
+				</menuchoice>
+				to pair the two files as a copy.
+			</para>
+		</tip>
 	</sect2>
 	<sect2 id="tsvn-dug-diffing">
 		<title>Viewing Diffs</title>
